# skin-market

./: .dockerignore  .env.example  .gitignore  ARCHITECTURE.md  Dockerfile  LICENSE  PROJECT_OVERVIEW.md  PROJECT_SPEC.md  README.md  TODO.md  alembic.ini  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
analytics/: anomaly_detection.py  cross_source.py  deepseek_client.py  drift.py  moving_averages.py  narrative.py  ollama_client.py  pattern_classifier.py  scheduler.py  unavailability_streak.py
api/: asset_valuation.py  auth.py  entitlements.py  main.py  schemas.py  watchlist_tiers.py
api/routes/: alerts.py  asset_valuation.py  charts.py  deals.py  drift.py  entitlements.py  history.py  insights.py  items.py  portfolio.py  portfolio_monitors.py  signals.py
bot/: README.md  deepseek_client.py  discord_render.py  main.py  ollama_client.py  portfolio_monitor_delivery.py  price_alert_delivery.py  signal_subscription_delivery.py  system_prompt.py  tools.py
collectors/: base.py  dmarket.py  pricempire.py  scheduler.py  skinport.py  steam.py
data/: pattern_sensitivity.yaml  watchlist.yaml
db/: connection.py  llm_usage.py  models.py  naming.py
db/migrations/: env.py
docs/: deepseek-cost-analysis.md  deepseek-quality-samples.md  operations.md  paid-discord-bot-feature-gap.md  phase2a-ingest-validation.md  phase2b-validation.md  phase2b-watchlist-proposal.md  phase3a-inventory-valuation-self-review.md  phase3b-inspect-valuation-self-review.md  pre-phase2-diagnostics.md  pre-phase2-pricempire-diagnostic.md  sources-and-semantics.md
docs/adr/: 001-uv-dependency-management.md  002-timescaledb-over-vanilla-postgres.md  003-fastapi-over-flask-django.md  004-psycopg3-over-psycopg2-binary.md  005-slug-algorithm.md  006-collector-resilience.md  007-narrative-insights-text-column.md  008-skinport-collector.md  009-scheduler-design.md  010-analytics-design.md  011-narrative-job-llm.md  012-dmarket-collector.md  013-rate-limit-policy.md  014-read-api-design.md  015-bot-skill-design.md  016-discord-bot-runtime.md  017-observed-at-timestamp-split.md  018-pricempire-breadth-source.md  019-pricempire-collector-design.md  020-pricempire-item-metadata.md  022-pattern-aware-drift-detector.md  024-two-tier-watchlist-architecture.md  026-deepseek-inference-cutover.md  027-deepseek-context-cache-and-cost-control.md  028-public-inventory-asset-valuation.md  029-modern-inspect-link-valuation.md  030-public-inventory-portfolio-baseline.md  031-persistent-price-alerts.md  032-portfolio-snapshots.md  033-discord-entitlements-and-quotas.md  034-market-signal-digest.md  (+5 more)
scripts/: capture_dmarket_fixtures.py  seed_broad_tier.py  seed_catalog.py  seed_featured_tier.py  seed_watchlist.py  verify_slug_uniqueness.py  watchlist_edit.py
tests/: test_analytics.py  test_api.py  test_api_drift.py  test_api_tier_audit.py  test_asset_valuation.py  test_bot.py  test_bot_skill.py  test_db_roundtrip.py  test_dmarket_collector.py  test_drift.py  test_entitlements.py  test_llm_usage.py  test_migration_roundtrip.py  test_naming.py  test_pattern_classifier.py  test_portfolio_monitors.py  test_portfolio_snapshots.py  test_price_alerts.py  test_pricempire_collector.py  test_scheduler.py  test_seed_broad_tier.py  test_seed_catalog.py  test_seed_featured_tier.py  test_signal_subscriptions.py  test_skinport_collector.py  test_smoke.py  test_steam_collector.py  test_verify_slug_uniqueness.py  test_watchlist_edit.py  test_watchlist_tiers.py
(+40 files in other folders)
