[project]
name = "skin-market"
version = "0.1.0"
description = "CS2 skin market data aggregation service with a Discord-native LLM frontend."
readme = "README.md"
requires-python = ">=3.11,<3.13"
authors = [{ name = "Vasilis" }]
license = { text = "Proprietary" }

dependencies = [
    "sqlalchemy>=2.0,<3.0",
    "psycopg[binary]>=3.2,<4.0",
    "alembic>=1.13,<2.0",
    "python-dotenv>=1.0,<2.0",
    "httpx>=0.27,<1.0",
    "apscheduler>=3.10,<4.0",
    "fastapi>=0.115,<1.0",
    "uvicorn[standard]>=0.32,<1.0",
    "pydantic>=2.9,<3.0",
    "matplotlib>=3.9,<4.0",
    "pandas>=2.2,<3.0",
]

[dependency-groups]
dev = [
    "pytest>=8.3,<9.0",
    "pytest-asyncio>=0.24,<1.0",
    "pytest-httpx>=0.32,<1.0",
    "ruff>=0.7,<1.0",
]

[tool.uv]
package = false

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra"
asyncio_mode = "auto"

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "SIM"]

[tool.ruff.lint.per-file-ignores]
# Seed data: long lines are unavoidable when each item is one row.
"scripts/seed_watchlist.py" = ["E501"]
