[project]
name = "skin-market"
version = "0.1.0"
description = "CS2 skin market data aggregation service with a Discord-native LLM frontend."
readme = "README.md"
requires-python = ">=3.11,<3.13"
authors = [{ name = "Vasilis" }]
license = { text = "Proprietary" }

dependencies = [
    "sqlalchemy>=2.0,<3.0",
    "psycopg[binary]>=3.2,<4.0",
    "alembic>=1.13,<2.0",
    "python-dotenv>=1.0,<2.0",
    "httpx>=0.27,<1.0",
    # Skinport returns 406 unless Accept-Encoding includes 'br'. brotli
    # provides the codec; httpx decompresses transparently when it's installed.
    "brotli>=1.1,<2.0",
    "apscheduler>=3.10,<4.0",
    "fastapi>=0.115,<1.0",
    "uvicorn[standard]>=0.32,<1.0",
    "pydantic>=2.9,<3.0",
    "matplotlib>=3.9,<4.0",
    "pandas>=2.2,<3.0",
    "pyyaml>=6.0,<7.0",
    # ruamel.yaml preserves comments and ordering when rewriting
    # data/watchlist.yaml from scripts/watchlist_edit.py. PyYAML's
    # safe_dump would erase the file's header comments and section
    # markers on every edit.
    "ruamel.yaml>=0.18,<1.0",
    # Phase 7c — the Discord bot. discord.py is the de-facto Python
    # Discord client; ollama is the official Python client for the
    # Ollama daemon the bot routes through (see ADR 016).
    "discord.py>=2.4,<3.0",
    "ollama>=0.4,<1.0",
    "ijson>=3.5.0",
]

[dependency-groups]
dev = [
    "pytest>=8.3,<9.0",
    "pytest-asyncio>=0.24,<1.0",
    "pytest-httpx>=0.32,<1.0",
    "ruff>=0.7,<1.0",
]

[tool.uv]
package = false

[tool.pytest.ini_options]
testpaths = ["tests"]
# Skip destructive tests by default — they wipe DB tables. Opt in with
# `uv run pytest -m destructive`.
addopts = "-ra -m 'not destructive'"
asyncio_mode = "auto"
markers = [
    "destructive: tests that wipe DB data (e.g. migration roundtrip). Opt in via `pytest -m destructive`.",
]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "SIM"]

[tool.ruff.lint.per-file-ignores]
# The system prompt is a single triple-quoted string of LLM-facing
# instructions; trigger-phrase lists are naturally long, and wrapping
# them adds visual noise without helping the model. Disable E501 for
# this file specifically.
"bot/system_prompt.py" = ["E501"]
